# finding-value

./: .gitignore  README.md  bullpen.txt  pyproject.toml  update_prices.py  update_sheet.py
files/AAPL/: AAPL_catalyst.md  AAPL_fisher.md  AAPL_moat.md  AAPL_valuation.md
files/ABG/: ABG_catalyst.md  ABG_fisher.md  ABG_moat.md  ABG_valuation.md
files/ABM/: ABM_catalyst.md  ABM_fisher.md  ABM_moat.md  ABM_valuation.md
files/ABNB/: ABNB_catalyst.md  ABNB_fisher.md  ABNB_moat.md  ABNB_valuation.md
files/ACHC/: ACHC_catalyst.md  ACHC_fisher.md  ACHC_moat.md  ACHC_valuation.md
files/ACI/: ACI_catalyst.md  ACI_fisher.md  ACI_moat.md  ACI_valuation.md
files/ADBE/: ADBE_catalyst.md  ADBE_fisher.md  ADBE_moat.md  ADBE_valuation.md
files/ADP/: ADP_catalyst.md  ADP_fisher.md  ADP_moat.md  ADP_valuation.md
files/ADSK/: ADSK_catalyst.md  ADSK_fisher.md  ADSK_moat.md  ADSK_valuation.md
files/ADUS/: ADUS_catalyst.md  ADUS_fisher.md  ADUS_moat.md  ADUS_valuation.md
files/AIT/: AIT_catalyst.md  AIT_fisher.md  AIT_moat.md  AIT_valuation.md
files/ALK/: ALK_catalyst.md  ALK_fisher.md  ALK_moat.md  ALK_valuation.md
files/ALLE/: ALLE_catalyst.md  ALLE_fisher.md  ALLE_moat.md  ALLE_valuation.md
files/ALLY/: ALLY_catalyst.md  ALLY_fisher.md  ALLY_moat.md  ALLY_valuation.md
files/ALRM/: ALRM_catalyst.md  ALRM_fisher.md  ALRM_moat.md  ALRM_valuation.md
files/ALSN/: ALSN_catalyst.md  ALSN_fisher.md  ALSN_moat.md  ALSN_valuation.md
files/AMD/: AMD_catalyst.md  AMD_fisher.md  AMD_moat.md  AMD_valuation.md
files/H/: H_moat.md  (+3 more)
finding_value/: __main__.py  valuation.py
(+1092 files in other folders)
